--- a/repo/home/home_conf.conf
+++ b/repo/home/home_conf.conf
@@ -1,8 +1,8 @@
 [database]
 host = localhost
 database = home
-user = admin
-password = admin
+user = home
+password = homepass
 port = 5432
 
 [settings]
