--- a/repo/home/conf/home_conf.conf
+++ b/repo/home/conf/home_conf.conf
@@ -1,8 +1,8 @@
 [database]
 host = localhost
 database = home
-user = home
-password = homepass
+user = admin
+password = admin
 port = 5432
 
 [settings]
