--- a/repo/home/requirements.txt
+++ b/repo/home/requirements.txt
@@ -5,3 +5,6 @@ cachetools==5.5.2
 cryptography==44.0.2
 webauthn==2.5.2
 flask-cors==5.0.1
+requests==2.32.4
+beautifulsoup4==4.13.4
+selenium==4.33.0
